chore(tslint): add tslint & tslint check in test

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test:e2e": "./node_modules/.bin/cucumber-js features/implemented/**/*.feature --require 'dist/features/steps/*.step.js' --format node_modules/cucumber-pretty",
     "test:e2e-dev": "./node_modules/.bin/cucumber-js features/dev/**/*.feature --require 'dist/features/steps/*.step.js' --format node_modules/cucumber-pretty",
     "test:unit": "./node_modules/.bin/jest",
-    "test": "npm run test:e2e && npm run test:unit",
+    "test": "npm run lint && npm run test:e2e && npm run test:unit",
     "lint": "./node_modules/.bin/tslint -c tslint.json  -t verbose --fix 'src/core/**/*.ts'",
     "doc": "./node_modules/.bin/typedoc  --out doc/ src/ --mode file --ignoreCompilerErrors --includeDeclarations --excludeExternals",
     "prepare": "npm run build",
@@ -51,7 +51,7 @@
     "ts-generator": "0.0.8",
     "ts-jest": "^23.10.5",
     "ts-loader": "^5.4.5",
-    "tslint": "^5.18.0",
+    "tslint": "^5.20.0",
     "typechain": "^0.3.14",
     "typedoc": "^0.14.2",
     "typedoc-plugin-markdown": "^2.0.8",
