--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test:e2e-dev": "./node_modules/.bin/cucumber-js features/dev/**/*.feature --require 'dist/features/steps/*.step.js' --format node_modules/cucumber-pretty",
     "test:unit": "./node_modules/.bin/jest",
     "test": "npm run lint && npm run test:unit &&npm run test:e2e",
-    "lint": "./node_modules/.bin/tslint -c tslint.json  -t verbose --fix 'src/core/**/*.ts'",
+    "lint": "./node_modules/.bin/eslint -c .eslintrc.json --fix 'src/core/**/*.ts'",
     "doc": "./node_modules/.bin/typedoc  --out doc/ src/ --mode file --ignoreCompilerErrors --includeDeclarations --excludeExternals",
     "prepare": "npm run build",
     "prepare:publish": "npm run build && npm run test",
@@ -40,10 +40,21 @@
     "@types/chai": "^4.1.7",
     "@types/cucumber": "^4.0.5",
     "@types/jest": "^24.0.17",
+    "@typescript-eslint/eslint-plugin": "^2.6.0",
+    "@typescript-eslint/parser": "^2.6.0",
     "babel-loader": "^8.0.6",
     "chai": "^4.2.0",
     "cucumber": "^5.1.0",
+    "cucumber-pretty": "^1.5.2",
+    "eslint": "^6.6.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jest": "^23.0.2",
+    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
     "jest": "^24.1.0",
+    "node-fetch-polyfill": "^2.0.6",
     "nodemon": "^1.19.1",
     "puppeteer": "^1.20.0",
     "source-map-loader": "^0.2.4",
@@ -57,9 +68,7 @@
     "webpack": "^4.41.0",
     "webpack-bundle-analyzer": "^3.5.2",
     "webpack-cli": "^3.3.9",
-    "webpack-node-externals": "^1.7.2",
-    "cucumber-pretty": "^1.5.2",
-    "node-fetch-polyfill": "^2.0.6"
+    "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
     "@0xcert/cert": "1.5.2",
