test(ci): add gitool to project and ci

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test:e2e-pretty": "./node_modules/.bin/cucumber-js features/implemented/**/*.feature --require 'dist/features/steps/*.step.js' --format node_modules/cucumber-pretty",
     "test:e2e-dev": "./node_modules/.bin/cucumber-js features/dev/**/*.feature --require 'dist/features/steps/*.step.js' --format node_modules/cucumber-pretty",
     "test:unit": "./node_modules/.bin/jest",
-    "test": "npm run lint && npm run test:unit &&npm run test:e2e",
+    "test": "gitool -cl=3 && npm run lint && npm run test:unit &&npm run test:e2e",
     "lint": "./node_modules/.bin/eslint -c .eslintrc.json --fix 'src/core/**/*.ts'",
     "doc": "./node_modules/.bin/typedoc  --out doc/ src/ --mode file --ignoreCompilerErrors --includeDeclarations --excludeExternals",
     "prepare": "npm run build",
@@ -53,6 +53,7 @@
     "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
+    "gitool": "^1.4.0",
     "jest": "^24.1.0",
     "node-fetch-polyfill": "^2.0.6",
     "nodemon": "^1.19.1",
