--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "node-fetch-polyfill": "^2.0.6",
     "nodemon": "^1.19.1",
     "puppeteer": "^1.20.0",
+    "puppeteer-firefox": "^0.5.0",
     "source-map-loader": "^0.2.4",
     "ts-generator": "0.0.8",
     "ts-jest": "^23.10.5",
