feat(identity): getIdentity reject if no id and store does not store error.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,7 @@
         "jest"
     ],
     "rules": {
+        "prefer-promise-reject-errors": "off",
         "no-unused-vars": "off",
         "handle-callback-err": "off",
         "node/no-deprecated-api":"off",
