feat(certificate): add method createActionProofLink

--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "@0xcert/cert": "1.5.2",
     "@0xcert/conventions": "^2.0.0-alpha3",
     "@arianee/arianee-abi": "0.7.0",
+    "append-query": "^2.1.0",
     "axios": "^0.18.1",
     "ethers": "^4.0.38",
     "eventemitter3": "^4.0.0",
