--- a/package.json
+++ b/package.json
@@ -78,11 +78,11 @@
     "@0xcert/cert": "1.5.2",
     "@0xcert/conventions": "^2.0.0-alpha3",
     "@arianee/arianee-abi": "0.7.0",
+    "@arianee/iso-language-picker": "^0.2.0",
     "append-query": "^2.1.0",
     "axios": "^0.18.1",
     "ethers": "^4.0.38",
     "eventemitter3": "^4.0.0",
-    "iso-language-picker": "^1.1.0",
     "promise.prototype.finally": "^3.1.2",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^3.4.0",
