chore(lint): npm run test run lint instead of lint --fix

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "test:e2e-dev": "./node_modules/.bin/cucumber-js features/implemented/**/*.feature --require 'dist/features/steps/*.step.js' --format node_modules/cucumber-pretty --tags @dev",
     "test:unit": "./node_modules/.bin/jest",
     "test": "gitool -cl=3 && npm run lint && npm run test:unit &&npm run test:e2e",
-    "lint": "./node_modules/.bin/eslint -c .eslintrc.json --fix 'src/core/**/*.ts'",
+    "lint": "./node_modules/.bin/eslint -c .eslintrc.json 'src/core/**/*.ts'",
+    "lint:fix": "./node_modules/.bin/eslint -c .eslintrc.json --fix 'src/core/**/*.ts'",
     "doc": "./node_modules/.bin/typedoc  --out doc/ src/ --mode file --ignoreCompilerErrors --includeDeclarations --excludeExternals",
     "prepare": "npm run build",
     "prepare:publish": "npm run build && npm run test",
