feat(JWT): create methods for jwt sign by web3

--- a/package.json
+++ b/package.json
@@ -80,10 +80,12 @@
     "@0xcert/conventions": "^2.0.0-alpha3",
     "@arianee/arianee-abi": "^0.11.0",
     "@arianee/iso-language-picker": "^0.3.0",
+    "@types/js-base64": "^2.3.1",
     "append-query": "^2.1.0",
     "axios": "^0.18.1",
     "ethers": "^4.0.38",
     "eventemitter3": "^4.0.0",
+    "js-base64": "^2.5.2",
     "promise.prototype.finally": "^3.1.2",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^3.4.0",
