--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test:rerunFailTest": "./node_modules/.bin/cucumber-js @rerun.txt --require 'dist/features/steps/*.step.js'",
     "test:e2e-pretty": "./node_modules/.bin/cucumber-js features/implemented/**/*.feature --require 'dist/features/steps/*.step.js' --format node_modules/cucumber-pretty",
     "test:e2e-dev": "./node_modules/.bin/cucumber-js features/implemented/**/*.feature --require 'dist/features/steps/*.step.js' --format node_modules/cucumber-pretty --tags @dev",
-    "test:unit": "./node_modules/.bin/jest",
+    "test:unit": "./node_modules/.bin/jest --forceExit",
     "test": "gitool -cl=3 && npm run lint && npm run test:unit &&npm run test:e2e",
     "lint": "./node_modules/.bin/eslint -c .eslintrc.json 'src/core/**/*.ts'",
     "lint:fix": "./node_modules/.bin/eslint -c .eslintrc.json --fix 'src/core/**/*.ts'",
@@ -53,6 +53,7 @@
     "eslint-plugin-standard": "^4.0.1",
     "gitool": "^1.13.0",
     "jest": "^24.1.0",
+    "jest-environment-node": "^26.3.0",
     "node-fetch-polyfill": "^2.0.6",
     "nodemon": "^1.19.1",
     "parcel-bundler": "^1.12.4",
