--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "prepare": "npm run build",
     "prepare:publish": "npm run build && npm run test",
     "build": "npm run build-web && npm run build-node",
-    "build-web": "parcel build ./src/index.ts --out-dir=browser --out-file=bundle.js --global=ArianeeLib && npm run build-webFileForTest",
+    "build-web": "parcel build ./src/index.browser-bundle.ts --out-dir=browser --out-file=bundle.js --global=ArianeeLib && npm run build-webFileForTest",
     "build-webFileForTest": "parcel build ./example/myexecfile.ts --out-dir=dist",
     "build-node": "./node_modules/.bin/tsc",
     "changelog": "gt -po=changelog.md"
@@ -77,12 +77,13 @@
     "@types/js-base64": "^2.3.1",
     "append-query": "^2.1.0",
     "axios": "^0.21.1",
-    "ethers": "^4.0.38",
+    "ethers": "^5.3.0",
     "eventemitter3": "^4.0.0",
     "js-base64": "^2.5.2",
     "promise.prototype.finally": "^3.1.2",
     "reflect-metadata": "^0.1.13",
+    "regenerator-runtime": "^0.13.7",
     "tsyringe": "^3.4.0",
-    "web3": "1.2.2"
+    "web3": "1.3.6"
   }
 }
