--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@arianee/arianeejs",
   "version": "1.65.0",
   "main": "dist/src/index.js",
-  "browser": "dist/src/index.js",
+  "browser": "dist/src/index.browser-bundle.js",
   "unpkg": "browser/bundle.js",
   "scripts": {
     "start": "./node_modules/.bin/tsc --watch",
