chore(cucumber): change cucumber npm package to official one

--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "start": "./node_modules/.bin/tsc --watch",
     "launch": "nodemon ./dist/example/myexample.js",
     "test:watch": "./node_modules/.bin/jest --watch",
-    "test:e2e": "./node_modules/.bin/cucumber-js features/implemented/**/*.feature --require 'dist/features/steps/*.step.js' --parallel 2 --fail-fast",
+    "test:e2e": "./node_modules/.bin/cucumber-js features/implemented/**/*.feature --require 'dist/features/steps/*.step.js' --retry 2 --fail-fast --tags @browser",
+    "test:playwright": "./node_modules/.bin/cucumber-js features/implemented/**/*.feature --require 'dist/features/steps/*.step.js' --retry 2 --fail-fast --tags @playwright",
     "test:rerunFailTest": "./node_modules/.bin/cucumber-js @rerun.txt --require 'dist/features/steps/*.step.js'",
-    "test:e2e-pretty": "./node_modules/.bin/cucumber-js features/implemented/**/*.feature --require 'dist/features/steps/*.step.js' --format node_modules/cucumber-pretty",
-    "test:e2e-dev": "./node_modules/.bin/cucumber-js features/implemented/**/*.feature --require 'dist/features/steps/*.step.js' --format node_modules/cucumber-pretty --tags @dev",
+    "test:e2e-pretty": "./node_modules/.bin/cucumber-js features/implemented/**/*.feature --require 'dist/features/steps/*.step.js' --format @cucumber/pretty-formatter",
+    "test:e2e-dev": "./node_modules/.bin/cucumber-js features/implemented/**/*.feature --require 'dist/features/steps/*.step.js' --format @cucumber/pretty-formatter --tags @dev",
     "test:unit": "./node_modules/.bin/jest --forceExit",
     "test": "gitool -cl=3 && npm run lint && npm run test:unit &&npm run test:e2e",
     "lint": "./node_modules/.bin/eslint -c .eslintrc.json 'src/core/**/*.ts'",
@@ -29,20 +30,21 @@
     "dist",
     "browser"
   ],
-  "author": "",
+  "author": "Arianee",
   "license": "ISC",
   "repository": {
     "type": "git",
     "url": "https://github.com/Arianee/arianeeJS"
   },
   "devDependencies": {
+    "@cucumber/cucumber": "^7.3.0",
+    "@cucumber/pretty-formatter": "^1.0.0-alpha.1",
     "@types/chai": "^4.1.7",
     "@types/cucumber": "^4.0.5",
     "@types/jest": "^24.0.17",
     "@typescript-eslint/eslint-plugin": "^2.6.0",
     "@typescript-eslint/parser": "^2.6.0",
     "chai": "^4.2.0",
-    "cucumber": "^5.1.0",
     "cucumber-pretty": "^1.5.2",
     "eslint": "^6.6.0",
     "eslint-config-standard": "^14.1.0",
@@ -57,8 +59,7 @@
     "node-fetch-polyfill": "^2.0.6",
     "nodemon": "^1.19.1",
     "parcel-bundler": "^1.12.4",
-    "puppeteer": "^1.20.0",
-    "puppeteer-firefox": "^0.5.0",
+    "playwright": "^1.12.3",
     "source-map-loader": "^0.2.4",
     "ts-generator": "0.0.8",
     "ts-jest": "^23.10.5",
