--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,8 +16,11 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Declare domain
+          name: Declare domain blockchain
           command: echo 127.0.0.1 blockchain | sudo tee -a /etc/hosts
+      - run:
+          name: Declare domain wallet
+          command: echo 127.0.0.1 wallet | sudo tee -a /etc/hosts
       - node/install-packages
       - run:
           name: Launch docker
