--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,6 @@ services:
   faucet:
     container_name: faucet
     build:
-      context: "https://${GITHUBTOKEN}@github.com/Arianee/arianee-faucet.git#feat/docker"
+      context: "https://${GITHUBTOKEN}@github.com/Arianee/arianee-faucet.git#main"
     ports:
       - 3001:3000
