--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ orbs:
 jobs:
   build-and-test-uat:
     machine:
-      image: ubuntu-1604:202104-01
+      image: ubuntu-2004:202010-01
     resource_class: large
     steps:
       - checkout
@@ -21,7 +21,7 @@ jobs:
       - node/install-packages
       - run:
           name: Launch docker
-          command: docker-compose up --detach --force-recreate
+          command: docker-compose up --build --detach --force-recreate
       - run:
           name: Run tests
           command: npm test
