--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,6 +35,11 @@ jobs:
       NODE_ENV: development
     steps:
       - checkout
+      - run:
+          name: Install python
+          command: |
+            apt-get update -y
+            apt-get install -y python3.8 python3-pip
       - node/install-packages
       - run:
           name: Fix up git URLs
