--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "^0.13.7",
     "tsyringe": "^3.4.0",
+    "web-streams-polyfill": "^3.2.1",
     "web3": "1.3.6"
   }
 }
