--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
   faucet:
     container_name: faucet
     build:
-      context: "https://${GITHUBTOKEN}@github.com/Arianee/arianee-faucet.git#main"
+      context: "https://${GITHUBTOKEN}@github.com/Arianee/arianee-faucet.git#clever-cloud"
     ports:
       - 3000:3000
 
