--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "doc": "./node_modules/.bin/typedoc  --out doc/ src/ --mode file --ignoreCompilerErrors --includeDeclarations --excludeExternals",
     "prepare": "npm run build",
     "prepare:publish": "npm run build && npm run test",
-    "postpublish": "npm version minor -m 'feat(version): update to version %s [ci skip]' && git push",
+    "bump:patch": "npm version patch -m 'feat(version): update to version %s [ci skip]' && git push",
+    "bump:minor": "npm version minor -m 'feat(version): update to version %s [ci skip]' && git push",
+    "bump:major": "npm version major -m 'feat(version): update to version %s [ci skip]' && git push",
     "build": "npm run build-web && npm run build-node",
     "build-web": "parcel build ./src/index.browser-bundle.ts --out-dir=browser --out-file=bundle.js --global=ArianeeLib && npm run build-webFileForTest",
     "build-webFileForTest": "parcel build ./example/myexecfile.ts --out-dir=dist",
