--- a/package.json
+++ b/package.json
@@ -62,15 +62,18 @@
     "node-fetch-polyfill": "^2.0.6",
     "nodemon": "^1.19.1",
     "parcel-bundler": "^1.12.4",
-    "playwright": "^1.12.3",
+    "playwright": "^1.35.1",
     "source-map-loader": "^0.2.4",
     "ts-generator": "0.0.8",
-    "ts-jest": "^23.10.5",
+    "ts-jest": "^24.1.0",
     "ts-loader": "^5.4.5",
     "tslint": "^5.20.0",
     "typechain": "^0.3.14",
     "typedoc": "^0.14.2",
-    "typescript": "3.6.3"
+    "typescript": "4.9.5"
+  },
+  "overrides": {
+    "eth-lib": "0.1.29"
   },
   "dependencies": {
     "@0xcert/cert": "1.5.2",
