--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,6 +34,7 @@ jobs:
   build-and-test-playwright:
     docker:
       - image: mcr.microsoft.com/playwright:focal
+    resource_class: large
     environment:
       NODE_ENV: development
     steps:
